# prophecy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: prophecy.h
src/minheap/: minheap.h  minheap_add.c  minheap_remove.c  minheap_swap.c
src/scheduler/: scheduler_addTask.c  scheduler_clear.c  scheduler_create.c  scheduler_destroy.c  scheduler_init.c  scheduler_update.c
src/task/: task_create.c
